Mensagens de Imagem adicionadas e view finalizada.

--- a/src/org/xcommerce/bundles/message_en_US.properties
+++ b/src/org/xcommerce/bundles/message_en_US.properties
@@ -9,3 +9,14 @@ DELETE_IMAGE=Delete
 LIST_IMAGES=List
 IMAGE=Image
 CHOOSE_IMAGE=Choose an image
+LOGIN_ERROR=Account not found.
+UNEXPECTED_ERROR=Unexpected error.
+MULTIPART_FORM_ERROR=A problem has occurred while loading the upload form.
+BACK=Back
+UPLOAD_SUCCESS=Image file uploaded successfully.
+UPLOAD_ERROR=A problem has occurred while uploading the image.
+DELETE_IMAGE_SUCCESS=Image file deleted successfully.
+DELETE_IMAGE_ERROR=A problem has occurred while deleting the image.
+LIST_IMAGE_ERROR=A problem has occurred while loading the image list.
+IMAGE_NOT_SUPPORTED=File is not a supported image file.
+SUPPORTED_IMAGE_TYPES=You can upload a JPEG, PNG or BMP image.
