--- a/src/org/xcommerce/bundles/message_pt_BR.properties
+++ b/src/org/xcommerce/bundles/message_pt_BR.properties
@@ -9,3 +9,14 @@ DELETE_IMAGE=Apagar
 UPLOAD_IMAGE=Subir
 IMAGE=Imagem
 CHOOSE_IMAGE=Escolha uma imagem
+LOGIN_ERROR=Cadastro n\u00e3o encontrado.
+UNEXPECTED_ERROR=Ocorreu um problema n\u00e3o esperado.
+MULTIPART_FORM_ERROR=Ocorreu um problema ao carregar o formul\u00e1rio de upload.
+BACK=Voltar
+UPLOAD_SUCCESS=Upload da imagem realizado com sucesso.
+UPLOAD_ERROR=Ocorreu um problema na transfer\u00eancia da imagem.
+DELETE_IMAGE_SUCCESS=Imagem deletada com sucesso.
+DELETE_IMAGE_ERROR=Ocorreu um problema ao deletar a imagem.
+LIST_IMAGE_ERROR=Ocorreu um problema ao carregar a lista de imagens.
+IMAGE_NOT_SUPPORTED=O arquivo n\u00e3o \u00e9 um arquivo de imagem suportado.
+SUPPORTED_IMAGE_TYPES=Voc\u00ea pode enviar imagem JPEG, PNG ou BMP.
