--- a/src/org/xcommerce/bundles/message_en_US.properties
+++ b/src/org/xcommerce/bundles/message_en_US.properties
@@ -20,3 +20,6 @@ DELETE_IMAGE_ERROR=A problem has occurred while deleting the image.
 LIST_IMAGE_ERROR=A problem has occurred while loading the image list.
 IMAGE_NOT_SUPPORTED=File is not a supported image file.
 SUPPORTED_IMAGE_TYPES=You can upload a JPEG, PNG or BMP image.
+ESTOQUE=Storage Management
+LIST_ESTOQUE=List all the storage.
+BUSCA_ESTOQUE=Search for a product storage information.
