--- a/src/org/xcommerce/bundles/message_pt_BR.properties
+++ b/src/org/xcommerce/bundles/message_pt_BR.properties
@@ -20,3 +20,6 @@ DELETE_IMAGE_ERROR=Ocorreu um problema ao deletar a imagem.
 LIST_IMAGE_ERROR=Ocorreu um problema ao carregar a lista de imagens.
 IMAGE_NOT_SUPPORTED=O arquivo n\u00e3o \u00e9 um arquivo de imagem suportado.
 SUPPORTED_IMAGE_TYPES=Voc\u00ea pode enviar imagem JPEG, PNG ou BMP.
+ESTOQUE=Gerenciamento de Estoque
+LIST_ESTOQUE=Listar todo o estoque.
+BUSCA_ESTOQUE=Buscar pelo estoque de um produto específico.
