--- a/src/org/xcommerce/bundles/message_en_US.properties
+++ b/src/org/xcommerce/bundles/message_en_US.properties
@@ -23,3 +23,6 @@ SUPPORTED_IMAGE_TYPES=You can upload a JPEG, PNG or BMP image.
 ESTOQUE=Storage Management
 LIST_ESTOQUE=List all the storage.
 BUSCA_ESTOQUE=Search for a product storage information.
+ESTOQUE_PRECO=Value
+ESTOQUE_QUANTIDADE=Amount
+ESTOQUE_FORNECEDOR=Provider
