--- a/src/org/xcommerce/bundles/message_pt_BR.properties
+++ b/src/org/xcommerce/bundles/message_pt_BR.properties
@@ -23,3 +23,6 @@ SUPPORTED_IMAGE_TYPES=Voc\u00ea pode enviar imagem JPEG, PNG ou BMP.
 ESTOQUE=Gerenciamento de Estoque
 LIST_ESTOQUE=Listar todo o estoque.
 BUSCA_ESTOQUE=Buscar pelo estoque de um produto específico.
+ESTOQUE_PRECO=Valor
+ESTOQUE_QUANTIDADE=Qtde
+ESTOQUE_FORNECEDOR=Fornecedor
