--- a/src/org/xcommerce/bundles/message_en_US.properties
+++ b/src/org/xcommerce/bundles/message_en_US.properties
@@ -26,3 +26,9 @@ BUSCA_ESTOQUE=Search for a product storage information.
 ESTOQUE_PRECO=Value
 ESTOQUE_QUANTIDADE=Amount
 ESTOQUE_FORNECEDOR=Provider
+PRODUTO_TITLE=Products
+PRODUTO_SEARCH=Search
+PRODUTO_BUY=Buy
+PRODUTO_INSERT=Insert product
+PRODUTO_EDIT=Edit
+PRODUTO_REMOVE=Remove
