--- a/src/org/xcommerce/bundles/message_pt_BR.properties
+++ b/src/org/xcommerce/bundles/message_pt_BR.properties
@@ -26,3 +26,9 @@ BUSCA_ESTOQUE=Buscar pelo estoque de um produto específico.
 ESTOQUE_PRECO=Valor
 ESTOQUE_QUANTIDADE=Qtde
 ESTOQUE_FORNECEDOR=Fornecedor
+PRODUTO_TITLE=Produtos
+PRODUTO_SEARCH=Buscar
+PRODUTO_BUY=Comprar
+PRODUTO_INSERT=Inserir produto
+PRODUTO_EDIT=Editar
+PRODUTO_REMOVE=Remover
