--- a/src/org/xcommerce/bundles/message_pt_BR.properties
+++ b/src/org/xcommerce/bundles/message_pt_BR.properties
@@ -26,3 +26,6 @@ BUSCA_ESTOQUE=Buscar pelo estoque de um produto específico.
 ESTOQUE_PRECO=Valor
 ESTOQUE_QUANTIDADE=Qtde
 ESTOQUE_FORNECEDOR=Fornecedor
+INSERE_ESTOQUE=Inserir um estoque.
+ESTOQUE_INSERT_ERROR=Problema na inserção.
+ESTOQUE_INSERT_SUCCESS=Insercao bem sucedida.
