--- a/src/org/xcommerce/bundles/message_en_US.properties
+++ b/src/org/xcommerce/bundles/message_en_US.properties
@@ -26,3 +26,6 @@ BUSCA_ESTOQUE=Search for a product storage information.
 ESTOQUE_PRECO=Value
 ESTOQUE_QUANTIDADE=Amount
 ESTOQUE_FORNECEDOR=Provider
+INSERE_ESTOQUE=Insert a storage.
+ESTOQUE_INSERT_ERROR=Error on the insertion.
+ESTOQUE_INSERT_SUCCESS=Insertion successful.
