--- a/src/org/xcommerce/bundles/message_pt_BR.properties
+++ b/src/org/xcommerce/bundles/message_pt_BR.properties
@@ -32,3 +32,7 @@ PRODUTO_BUY=Comprar
 PRODUTO_INSERT=Inserir produto
 PRODUTO_EDIT=Editar
 PRODUTO_REMOVE=Remover
+PRODUTO_INSERT_IMAGE=Nova imagem para este produto
+PRODUTO_CARACTERISTICA=Caracteristicas
+PRODUTO_ESTOQUE=Verificar estoque
+NO_IMAGE="Sem imagem"
