--- a/src/org/xcommerce/bundles/message_en_US.properties
+++ b/src/org/xcommerce/bundles/message_en_US.properties
@@ -32,3 +32,7 @@ PRODUTO_BUY=Buy
 PRODUTO_INSERT=Insert product
 PRODUTO_EDIT=Edit
 PRODUTO_REMOVE=Remove
+PRODUTO_INSERT_IMAGE=New image for this product
+PRODUTO_CARACTERISTICA=Caracteristics
+PRODUTO_ESTOQUE=Check avaibility
+NO_IMAGE="No image"
