--- a/src/org/xcommerce/bundles/message_en_US.properties
+++ b/src/org/xcommerce/bundles/message_en_US.properties
@@ -30,6 +30,8 @@ ESTOQUE_FORNECEDOR=Provider
 INSERE_ESTOQUE=Insert a storage.
 ESTOQUE_INSERT_ERROR=Error on the insertion.
 ESTOQUE_INSERT_SUCCESS=Insertion successful.
+ESTOQUE_REMOVE_ERROR=Error on the removal.
+ESTOQUE_REMOVE_SUCCESS=Removal successful.
 
 PRODUTO_TITLE=Products
 PRODUTO_SEARCH=Search
