--- a/src/org/xcommerce/bundles/message_pt_BR.properties
+++ b/src/org/xcommerce/bundles/message_pt_BR.properties
@@ -30,6 +30,8 @@ ESTOQUE_FORNECEDOR=Fornecedor
 INSERE_ESTOQUE=Inserir um estoque.
 ESTOQUE_INSERT_ERROR=Problema na inserção.
 ESTOQUE_INSERT_SUCCESS=Insercao bem sucedida.
+ESTOQUE_REMOVE_ERROR=Problema na remoção.
+ESTOQUE_REMOVE_SUCCESS=Remoção bem sucedida.
 
 PRODUTO_TITLE=Produtos
 PRODUTO_SEARCH=Buscar
