--- a/src/org/xcommerce/bundles/message_en_US.properties
+++ b/src/org/xcommerce/bundles/message_en_US.properties
@@ -32,6 +32,8 @@ ESTOQUE_INSERT_ERROR=Error on the insertion.
 ESTOQUE_INSERT_SUCCESS=Insertion successful.
 ESTOQUE_REMOVE_ERROR=Error on the removal.
 ESTOQUE_REMOVE_SUCCESS=Removal successful.
+MODIFICAR_ESTOQUE=Modify
+REMOVER_ESTOQUE=Remove
 
 PRODUTO_TITLE=Products
 PRODUTO_SEARCH=Search
