--- a/src/org/xcommerce/bundles/message_pt_BR.properties
+++ b/src/org/xcommerce/bundles/message_pt_BR.properties
@@ -32,6 +32,8 @@ ESTOQUE_INSERT_ERROR=Problema na inserção.
 ESTOQUE_INSERT_SUCCESS=Insercao bem sucedida.
 ESTOQUE_REMOVE_ERROR=Problema na remoção.
 ESTOQUE_REMOVE_SUCCESS=Remoção bem sucedida.
+MODIFICAR_ESTOQUE=Modificar
+REMOVER_ESTOQUE=Remover
 
 PRODUTO_TITLE=Produtos
 PRODUTO_SEARCH=Buscar
