Login Box pronto.

--- a/src/org/xcommerce/bundles/message_pt_BR.properties
+++ b/src/org/xcommerce/bundles/message_pt_BR.properties
@@ -22,7 +22,29 @@ IMAGE_NOT_SUPPORTED=O arquivo n\u00e3o \u00e9 um arquivo de imagem suportado.
 SUPPORTED_IMAGE_TYPES=Voc\u00ea pode enviar imagem JPEG, PNG ou BMP.
 ESTOQUE=Gerenciamento de Estoque
 LIST_ESTOQUE=Listar todo o estoque.
-BUSCA_ESTOQUE=Buscar pelo estoque de um produto específico.
+BUSCA_ESTOQUE=Buscar pelo estoque de um produto espec\u00edfico.
 ESTOQUE_PRECO=Valor
 ESTOQUE_QUANTIDADE=Qtde
 ESTOQUE_FORNECEDOR=Fornecedor
+GREETING=Ol\u00e1
+LOGOUT=Sair
+
+INSERE_ESTOQUE=Inserir um estoque.
+ESTOQUE_INSERT_ERROR=Problema na inser\u00e7\u00e3o.
+ESTOQUE_INSERT_SUCCESS=Insercao bem sucedida.
+ESTOQUE_REMOVE_ERROR=Problema na remo\u00e7\u00e3o.
+ESTOQUE_REMOVE_SUCCESS=Remo\u00e7\u00e3o bem sucedida.
+MODIFICAR_ESTOQUE=Modificar
+REMOVER_ESTOQUE=Remover
+
+PRODUTO_TITLE=Produtos
+PRODUTO_SEARCH=Buscar
+PRODUTO_BUY=Comprar
+PRODUTO_INSERT=Inserir produto
+PRODUTO_EDIT=Editar
+PRODUTO_REMOVE=Remover
+PRODUTO_INSERT_IMAGE=Nova imagem para este produto
+PRODUTO_CARACTERISTICA=Caracteristicas
+PRODUTO_ESTOQUE=Verificar estoque
+NO_IMAGE="Sem imagem"
+
