--- a/src/org/xcommerce/bundles/message_en_US.properties
+++ b/src/org/xcommerce/bundles/message_en_US.properties
@@ -26,3 +26,24 @@ BUSCA_ESTOQUE=Search for a product storage information.
 ESTOQUE_PRECO=Value
 ESTOQUE_QUANTIDADE=Amount
 ESTOQUE_FORNECEDOR=Provider
+GREETING=Hello
+LOGOUT=Logout
+
+INSERE_ESTOQUE=Insert a storage.
+ESTOQUE_INSERT_ERROR=Error on the insertion.
+ESTOQUE_INSERT_SUCCESS=Insertion successful.
+ESTOQUE_REMOVE_ERROR=Error on the removal.
+ESTOQUE_REMOVE_SUCCESS=Removal successful.
+MODIFICAR_ESTOQUE=Modify
+REMOVER_ESTOQUE=Remove
+
+PRODUTO_TITLE=Products
+PRODUTO_SEARCH=Search
+PRODUTO_BUY=Buy
+PRODUTO_INSERT=Insert product
+PRODUTO_EDIT=Edit
+PRODUTO_REMOVE=Remove
+PRODUTO_INSERT_IMAGE=New image for this product
+PRODUTO_CARACTERISTICA=Caracteristics
+PRODUTO_ESTOQUE=Check avaibility
+NO_IMAGE="No image"
