--- a/src/org/xcommerce/bundles/message_pt_BR.properties
+++ b/src/org/xcommerce/bundles/message_pt_BR.properties
@@ -48,3 +48,5 @@ PRODUTO_CARACTERISTICA=Caracteristicas
 PRODUTO_ESTOQUE=Verificar estoque
 NO_IMAGE="Sem imagem"
 
+REGISTER=Cadastrar
+SUBMIT=Enviar
