Cliente em desenvolvimento

--- a/src/org/xcommerce/bundles/message_en_US.properties
+++ b/src/org/xcommerce/bundles/message_en_US.properties
@@ -47,5 +47,9 @@ PRODUTO_INSERT_IMAGE=New image for this product
 PRODUTO_CARACTERISTICA=Caracteristics
 PRODUTO_ESTOQUE=Check avaibility
 NO_IMAGE="No image"
+
 REGISTER=Register
 SUBMIT=Submit
+NAME=Name
+BIRTHDATE=Birth date
+DATEFORMAT=DD/MM/YYYY
