--- a/src/org/xcommerce/bundles/message_en_US.properties
+++ b/src/org/xcommerce/bundles/message_en_US.properties
@@ -43,3 +43,8 @@ PRODUTO_INSERT_IMAGE=New image for this product
 PRODUTO_CARACTERISTICA=Caracteristics
 PRODUTO_ESTOQUE=Check avaibility
 NO_IMAGE="No image"
+COMPRA_PRODUTO_NOME=Product name
+COMPRA_PRODUTO_PRECO=Price
+COMPRA_QUANTIDADE=quantity
+COMPRA_TOTAL=Total: 
+LIST_COMPRA=Products 
