--- a/src/org/xcommerce/bundles/message_pt_BR.properties
+++ b/src/org/xcommerce/bundles/message_pt_BR.properties
@@ -43,3 +43,8 @@ PRODUTO_INSERT_IMAGE=Nova imagem para este produto
 PRODUTO_CARACTERISTICA=Caracteristicas
 PRODUTO_ESTOQUE=Verificar estoque
 NO_IMAGE="Sem imagem"
+COMPRA_PRODUTO_NOME=Nome do Produto
+COMPRA_PRODUTO_PRECO=preco
+COMPRA_QUANTIDADE=quantidade
+COMPRA_TOTAL=Total da compra: 
+LIST_COMPRA=Produtos do Carrinho
