Cliente em desenvolvimento.

--- a/src/org/xcommerce/bundles/message_en_US.properties
+++ b/src/org/xcommerce/bundles/message_en_US.properties
@@ -53,3 +53,6 @@ SUBMIT=Submit
 NAME=Name
 BIRTHDATE=Birth date
 DATEFORMAT=DD/MM/YYYY
+PERSONAL_DATA=Personal data
+DELETE_ACCOUNT=Delete account
+UPDATE_ACCOUNT=Modify my data
