--- a/src/org/xcommerce/bundles/message_pt_BR.properties
+++ b/src/org/xcommerce/bundles/message_pt_BR.properties
@@ -53,3 +53,6 @@ SUBMIT=Enviar
 NAME=Nome
 BIRTHDATE=Data de nascimento
 DATEFORMAT=DD/MM/AAAA
+PERSONAL_DATA=Dados pessoais
+DELETE_ACCOUNT=Deletar conta
+UPDATE_ACCOUNT=Modificar meus dados
