--- a/src/org/xcommerce/bundles/message_en_US.properties
+++ b/src/org/xcommerce/bundles/message_en_US.properties
@@ -35,10 +35,13 @@ ESTOQUE_REMOVE_ERROR=Error on the removal.
 ESTOQUE_REMOVE_SUCCESS=Removal successful.
 MODIFICAR_ESTOQUE=Modify
 REMOVER_ESTOQUE=Remove
+PRODUTO_CARAC=Characteristic
 MODIFICAR_ESTOQUE=Modify
 REMOVER_ESTOQUE=Remove
 PRODUTO_TITLE=Products
 PRODUTO_SEARCH=Search
+PRODUTO_NOME=Name
+PRODUTO_DESC=Description
 PRODUTO_BUY=Buy
 PRODUTO_INSERT=Insert product
 PRODUTO_EDIT=Edit
