--- a/src/org/xcommerce/bundles/message_pt_BR.properties
+++ b/src/org/xcommerce/bundles/message_pt_BR.properties
@@ -31,13 +31,13 @@ ESTOQUE_INSERT_ERROR=Problema na inserção.
 ESTOQUE_INSERT_SUCCESS=Insercao bem sucedida.
 ESTOQUE_REMOVE_ERROR=Problema na remoção.
 ESTOQUE_REMOVE_SUCCESS=Remoção bem sucedida.
-GREETING=Ol\u00e1
+GREETING=Ola
 LOGOUT=Sair
 INSERE_ESTOQUE=Inserir um estoque.
-ESTOQUE_INSERT_ERROR=Problema na inser\u00e7\u00e3o.
+ESTOQUE_INSERT_ERROR=Problema na insercao.
 ESTOQUE_INSERT_SUCCESS=Insercao bem sucedida.
-ESTOQUE_REMOVE_ERROR=Problema na remo\u00e7\u00e3o.
-ESTOQUE_REMOVE_SUCCESS=Remo\u00e7\u00e3o bem sucedida.
+ESTOQUE_REMOVE_ERROR=Problema na remocao.
+ESTOQUE_REMOVE_SUCCESS=Remocao bem sucedida.
 MODIFICAR_ESTOQUE=Modificar
 REMOVER_ESTOQUE=Remover
 PRODUTO_TITLE=Produtos
@@ -45,6 +45,9 @@ PRODUTO_SEARCH=Buscar
 PRODUTO_BUY=Comprar
 PRODUTO_INSERT=Inserir produto
 PRODUTO_EDIT=Editar
+PRODUTO_NOME=Nome
+PRODUTO_DESC=Descricao
+PRODUTO_CARAC=Caracteristica
 PRODUTO_REMOVE=Remover
 PRODUTO_INSERT_IMAGE=Nova imagem para este produto
 PRODUTO_CARACTERISTICA=Caracteristicas
