--- a/src/org/xcommerce/bundles/message_en_US.properties
+++ b/src/org/xcommerce/bundles/message_en_US.properties
@@ -60,3 +60,8 @@ DATEFORMAT=DD/MM/YYYY
 PERSONAL_DATA=Personal data
 DELETE_ACCOUNT=Delete account
 UPDATE_ACCOUNT=Modify my data
+CLIENT_COMFIRM_ERROR=A problem has occurred on the identity confirmation.
+CLIENT_REGISTER_SUCCESS=Successfully registered.
+CLIENT_REGISTER_ERROR=A problem has occurred on the registration.
+CLIENT_UNREGISTER_ERROR=A problem occurred while trying to remove your data.
+CLIENT_MODIFY_ERROR=A problem has occurred while updating your data.
