--- a/src/org/xcommerce/bundles/message_pt_BR.properties
+++ b/src/org/xcommerce/bundles/message_pt_BR.properties
@@ -27,10 +27,10 @@ ESTOQUE_PRECO=Valor
 ESTOQUE_QUANTIDADE=Qtde
 ESTOQUE_FORNECEDOR=Fornecedor
 INSERE_ESTOQUE=Inserir um estoque.
-ESTOQUE_INSERT_ERROR=Problema na inserção.
+ESTOQUE_INSERT_ERROR=Problema na inser\u00c3\u00a7\u00c3\u00a3o.
 ESTOQUE_INSERT_SUCCESS=Insercao bem sucedida.
-ESTOQUE_REMOVE_ERROR=Problema na remoção.
-ESTOQUE_REMOVE_SUCCESS=Remoção bem sucedida.
+ESTOQUE_REMOVE_ERROR=Problema na remo\u00c3\u00a7\u00c3\u00a3o.
+ESTOQUE_REMOVE_SUCCESS=Remo\u00c3\u00a7\u00c3\u00a3o bem sucedida.
 GREETING=Ol\u00e1
 LOGOUT=Sair
 INSERE_ESTOQUE=Inserir um estoque.
@@ -63,3 +63,8 @@ DATEFORMAT=DD/MM/AAAA
 PERSONAL_DATA=Dados pessoais
 DELETE_ACCOUNT=Deletar conta
 UPDATE_ACCOUNT=Modificar meus dados
+CLIENT_COMFIRM_ERROR=Ocorreu um problema na confirma\u0107\u00e3o de identidade.
+CLIENT_REGISTER_SUCCESS=Cadastrado com sucesso.
+CLIENT_REGISTER_ERROR=Ocorreu um problema no cadastro.
+CLIENT_UNREGISTER_ERROR=Ocorreu um problema ao tentar remover seus dados.
+CLIENT_MODIFY_ERROR=Ocorreu um problema ao tentar atualizar seus dados.
